[gd_scene load_steps=4 format=3 uid="uid://cghc8a8p2fru4"]

[ext_resource type="Script" path="res://Scripts/basket_ball.gd" id="1_2lqvc"]
[ext_resource type="Texture2D" uid="uid://cax5vf1wuff7x" path="res://Assets/Cooooollllllll !!!!!   BASKETBALL!!!!!!!!!.png" id="1_xruv0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ghpwc"]
radius = 16.0

[node name="BasketBall" type="Area2D" groups=["ball"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_2lqvc")

[node name="Cooooollllllll!!!!!Basketball!!!!!!!!!" type="Sprite2D" parent="."]
scale = Vector2(0.09, 0.09)
texture = ExtResource("1_xruv0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ghpwc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.6, 1.6)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
